--- a/ChiaSeSach/cssfolder/search.css
+++ b/ChiaSeSach/cssfolder/search.css
@@ -3,6 +3,13 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
+    /* Ảnh */
+    background-image: url("../images/background/rain.jpg");
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-color: #f4f4f4;  
 }
 
 .main-content {
@@ -23,11 +30,16 @@ footer {
 .search-info {
     font-size: 18px;
     margin-bottom: 20px;
-    color: #333;
+    color: #ffffff;
+}
+
+.result-header {
+    color:#ffffff;
+    font-style: italic;
 }
 
 .no-result {
-    color: #999;
+    color:#ffffff;
     font-style: italic;
 }
 
