--- a/ChiaSeSach/cssfolder/login.css
+++ b/ChiaSeSach/cssfolder/login.css
@@ -8,6 +8,13 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    /* Ảnh */
+    background-image: url("../images/background/rain.jpg");
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-color: #f4f4f4;
 }
 
 .row {
