--- a/ChiaSeSach/cssfolder/delbooks.css
+++ b/ChiaSeSach/cssfolder/delbooks.css
@@ -1,4 +1,28 @@
 
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+    color: #333;
+    /* Ảnh */
+    background-image: url("../images/background/rain.jpg");
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-color: #f4f4f4;
+}
+
+main {
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 1000px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: #f4f4f4;
+}
+
 .table {
     max-width: 100%;
     width: 100%;
